[package]
name = "twitch_wasm_chat"
version = "0.1.0"
edition = "2021"

[build]
#target = "wasm32-unknown-unknown"
target = "wasm32-wasi"
#target = "wasm32-wasi-preview1-threads"

#[target.wasm32-wasi]
#runner = "lunatic run"

[lib]
crate-type = ["cdylib"]
#crate-type = ["bin"]
path = "src/lib.rs"

[dependencies]
js-sys = "0.3.65"
lazy_static = "1.4.0"
leptos = { version = "0.5.2", features = ["csr"] }
rand = "0.8.5"
regex = "1.10.2"
serde-wasm-bindgen = "0.6.1"
serde_json = "1.0.108"
wasm-bindgen = "0.2.88"
wasm-bindgen-futures = "0.4.38"

[dependencies.web-sys]
version = "0.3.65"
features = [
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket"
]
